fixing the alignments

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -242,6 +242,9 @@ footer img {
 	footer img {
 	    padding-top:10px
 	}
+	footer .text-right{
+		text-align:center !important
+	}
 }
 
 @media screen and (max-height: 450px) {
